force-app/main/default/objects/NCMT_Security_Parameters__c/NCMT_Security_Parameters__c.object-meta.xml
<CustomObject>
    <description>NCMT Security Price</description>
    <label>Security Parameter</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Security Criteria ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>