force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <label>Cost Category</label>
    <referenceTo>NCMT_Cost_Category__c</referenceTo>
    <relationshipLabel>Security Parameters</relationshipLabel>
    <relationshipName>Security_Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>