force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Cost_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Description__c</fullName>
    <formula>Cost_Category__r.Category_Description__c</formula>
    <label>Cost Description</label>
    <type>Text</type>
</CustomField>