force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Cost_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_Unit__c</fullName>
    <label>Cost Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASF</fullName>
            </value>
            <value>
                <fullName>GSF</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>Site Perimeter</fullName>
            </value>
            <value>
                <fullName>WSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>