force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Fiscal Year</description>
    <inlineHelpText>Fiscal Year</inlineHelpText>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>