force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Level_3__c.field-meta.xml
<CustomField>
    <fullName>Level_3__c</fullName>
    <label>Level 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>