force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Level_I_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Level_I_Minimum__c</fullName>
    <description>Level I - Minimum cost</description>
    <inlineHelpText>Level I - Minimum cost</inlineHelpText>
    <label>Level I - Minimum</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>