force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Level_II_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_II_Description__c</fullName>
    <description>Level II Description</description>
    <inlineHelpText>Level II Description</inlineHelpText>
    <label>Level II Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>