force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Level_II_Low__c.field-meta.xml
<CustomField>
    <fullName>Level_II_Low__c</fullName>
    <description>Level II - Low cost</description>
    <inlineHelpText>Level II - Low cost</inlineHelpText>
    <label>Level II - Low</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>