force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Level_III_Medium__c.field-meta.xml
<CustomField>
    <fullName>Level_III_Medium__c</fullName>
    <description>Level III - Medium cost</description>
    <inlineHelpText>Level III - Medium cost</inlineHelpText>
    <label>Level III - Medium</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>