force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Level_IV_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_IV_Description__c</fullName>
    <description>Level IV Description</description>
    <inlineHelpText>Level IV Description</inlineHelpText>
    <label>Level IV Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>