force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Level_IV_High__c.field-meta.xml
<CustomField>
    <fullName>Level_IV_High__c</fullName>
    <description>Level IV - High cost</description>
    <inlineHelpText>Level IV - High cost</inlineHelpText>
    <label>Level IV - High</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>