force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Level_V_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_V_Description__c</fullName>
    <description>Level V Description</description>
    <inlineHelpText>Level V Description</inlineHelpText>
    <label>Level V Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>