force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Level_V_Very_High__c.field-meta.xml
<CustomField>
    <fullName>Level_V_Very_High__c</fullName>
    <description>Level V - Very High cost</description>
    <inlineHelpText>Level V - Very High cost</inlineHelpText>
    <label>Level V - Very High</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>