force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Primary_Impact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Impact__c</fullName>
    <description>Primary Impact</description>
    <inlineHelpText>Primary Impact</inlineHelpText>
    <label>Primary Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>