force-app/main/default/objects/NCMT_Security_Parameters__c/fields/Security_Criterion__c.field-meta.xml
<CustomField>
    <fullName>Security_Criterion__c</fullName>
    <description>Security Criterion</description>
    <inlineHelpText>Security Criterion</inlineHelpText>
    <label>Security Criterion</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>