force-app/main/default/objects/NCMT_Security_Parameters__c/listViews/FY_2017.listView-meta.xml
<ListView>
    <fullName>FY_2017</fullName>
    <columns>NAME</columns>
    <columns>Cost_Category__c</columns>
    <columns>Security_Criterion__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Primary_Impact__c</columns>
    <columns>Level_I_Minimum__c</columns>
    <columns>Level_II_Low__c</columns>
    <columns>Level_III_Medium__c</columns>
    <columns>Level_IV_High__c</columns>
    <columns>Level_V_Very_High__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <label>FY-2017</label>
</ListView>